fixup! First model

--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,18 +1,18 @@
 .new-event
-  = link_to 'New event', new_event_path
+  = link_to t('event.links.new'), new_event_path
 
-h1 Events
+h1= t('event.headers.index')
 br
 - @events.each do |event|
   .event-divider
     h4= link_to event.title, event_path(event)
     p
-      = link_to 'Edit', edit_event_path(event)
+      = link_to t('event.links.edit'), edit_event_path(event)
       = ' | '
-      = link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }
+      = link_to t('event.links.delete'), event_path(event), method: :delete, data: { confirm: 'Are you sure?' }
     p
       span.text-muted
-        = "#{event.starttime.strftime('%a, %d %b %Y %H:%M')} | "
+        = "#{date_formatter(event.start_time)} | "
         = event.location
     p= event.description
 
