--- a/app/views/events/new.html.slim
+++ b/app/views/events/new.html.slim
@@ -1,6 +1,6 @@
 .new-event
-  = link_to 'Back', events_path
+  = link_to t('event.links.back'), events_path
 
-h2 New Event
+h2= t('event.headers.new')
 
 = render 'form'
