--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -11,4 +11,6 @@ html
   body
     .container
       .row
+        - flash.each do |key, value|
+          div class=("alert alert-#{key}") = value
         = yield
