fixup! First model

--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -6,7 +6,7 @@ h2= @event.title
 p
   = link_to t('event.links.edit'), edit_event_path(@event)
   = ' | '
-  = link_to t('event.links.delete'), event_path(@event), method: :delete, data: { confirm: 'Are you sure?' }
+  = link_to t('event.links.delete'), event_path(@event), method: :delete, data: { confirm: t('event.are_you_sure') }
 
 p.text-muted
   = "#{date_formatter(@event.start_time)} - #{date_formatter(@event.end_time)}"
