--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -7,5 +7,10 @@ html
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+
   body
-    = yield
+    .container
+      .row
+        - flash.each do |key, value|
+          div class=("alert alert-#{key}") = value
+        = yield
