--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -6,27 +6,27 @@
   margin-top: 30px;
 }
 
-.simple_form {
-  .form-group {
-    width: 700px;
-    
-    textarea {
-      height: 200px;
-    }
+.form-group {
+  width: 700px;
 
-    .invalid-feedback {
-      color: red;
-    }
+  textarea {
+    height: 200px;
+  }
+
+  .invalid-feedback {
+    color: #ff0000;
   }
 }
 
-.event_end_time, .event_start_time {
+.event_end_time,
+.event_start_time {
   div {
     display: flex;
   }
+
   select {
-    width: auto;
-    margin-right: 5px;
     margin-left: 5px;
+    margin-right: 5px;
+    width: auto;
   }
 }
