--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,8 +1,8 @@
 $red: #ff0000;
-$divider_color: #ddd;
+$divider-color: #ddd;
 
 .event-divider {
-  border-bottom: 1px solid $divider_color;
+  border-bottom: 1px solid $divider-color;
 }
 
 .new-event {
