--- a/app/views/devise/confirmations/new.html.slim
+++ b/app/views/devise/confirmations/new.html.slim
@@ -9,5 +9,5 @@ h2= t('devise.confirmations.resend_instructions')
       value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), \
       input_html: { autocomplete: "email" }                                                    \
   .form-actions
-    = f.button :submit, "Resend confirmation instructions"
+    = f.button :submit, t('devise.confirmations.resend_instructions')
 = render "devise/shared/links"
