--- a/app/views/devise/mailer/confirmation_instructions.html.slim
+++ b/app/views/devise/mailer/confirmation_instructions.html.slim
@@ -1,4 +1,4 @@
 p
-  | Welcome #{@email}!
-p You can confirm your account email through the link below:
-p= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token)
+  | #{t('devise.mailer.header.welcome')} #{@email}!
+p= t('devise.mailer.confirmation_instructions.account')
+p= link_to t('devise.mailer.confirmation_instructions.confirm_account'), confirmation_url(@resource, confirmation_token: @token)
