--- a/app/views/devise/mailer/reset_password_instructions.html.slim
+++ b/app/views/devise/mailer/reset_password_instructions.html.slim
@@ -1,6 +1,6 @@
 p
-  | Hello #{@resource.email}!
-p Someone has requested a link to change your password. You can do this through the link below.
-p= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token)
-p If you didn't request this, please ignore this email.
-p Your password won't change until you access the link above and create a new one.
+  | #{t('devise.mailer.header.welcome')} #{@resource.email}!
+p= t('devise.mailer.reset_password_instructions.notification')
+p= link_to t('devise.mailer.reset_password_instructions.change_password'), edit_password_url(@resource, reset_password_token: @token)
+p= t('devise.mailer.reset_password_instructions.ignore_email')
+p= t('devise.mailer.reset_password_instructions.warning')
