--- a/app/views/devise/mailer/unlock_instructions.html.slim
+++ b/app/views/devise/mailer/unlock_instructions.html.slim
@@ -1,5 +1,5 @@
 p
-  | Hello #{@resource.email}!
-p Your account has been locked due to an excessive number of unsuccessful sign in attempts.
-p Click the link below to unlock your account:
-p= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token)
+  | #{t('devise.mailer.header.welcome')} #{@resource.email}!
+p= t('devise.mailer.unlock_instructions.notification')
+p= t('devise.mailer.unlock_instructions.hint')
+p= link_to t('devise.mailer.unlock_instructions.unlock_account'), unlock_url(@resource, unlock_token: @token)
