--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,5 +1,5 @@
 h2
-  | Edit #{resource_name.to_s.humanize}
+  | #{t('event.links.edit')} #{resource_name.to_s.humanize}
 
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = f.error_notification
@@ -7,23 +7,23 @@ h2
     = f.input :email, required: true, autofocus: true
     - if devise_mapping.confirmable? && resource.pending_reconfirmation?
       p
-        | Currently waiting confirmation for: #{resource.unconfirmed_email}
+        | #{t('devise.registrations.confirmation_waiting')} #{resource.unconfirmed_email}
     = f.input :password,
-      hint: "leave it blank if you don't want to change it",
+      hint: t('devise.registrations.password_hint'),
       required: false,
       input_html: { autocomplete: 'new-password' }
     = f.input :password_confirmation,
       required: false,
       input_html: { autocomplete: 'new-password' }
     = f.input :current_password,
-      hint: 'we need your current password to confirm your changes',
+      hint: t('devise.registrations.current_password_hint'),
       required: true,
       input_html: { autocomplete: 'current-password' }
   .form-actions
-    = f.button :submit, 'Update'
+    = f.button :submit, t('devise.registrations.update')
 
-h3 Cancel my account
+h3= t('devise.registrations.cancel_account')
 p
-  | Unhappy? #{link_to 'Cancel my account', registration_path(resource_name), data: { confirm: t('event.confirm') }, method: :delete}
+  | #{t('devise.registrations.account_cancel_confirm')} #{link_to t('devise.registrations.cancel_account'), registration_path(resource_name), data: { confirm: t('event.confirm') }, method: :delete}
 
-= link_to 'Back', :back
+= link_to t('event.links.back'), :back
