--- a/app/views/devise/unlocks/new.html.slim
+++ b/app/views/devise/unlocks/new.html.slim
@@ -1,4 +1,4 @@
-h2 Resend unlock instructions
+h2= t('devise.unlocks.resend_instructions')
 = simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f|
   = f.error_notification
   = f.full_error :unlock_token
@@ -8,5 +8,5 @@ h2 Resend unlock instructions
       autofocus: true,
       input_html: { autocomplete: "email" }
   .form-actions
-    = f.button :submit, "Resend unlock instructions"
+    = f.button :submit, t('devise.unlocks.resend_instructions')
 = render "devise/shared/links"
