--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -2,13 +2,13 @@
   - if user_signed_in?
     = link_to t('event.links.new'), new_event_path
     .pull-right
-      = link_to 'My events', user_list_events_path
+      = link_to t('event.headers.user_list'), user_list_events_path
     br
     = link_to t('devise.sessions.sign_out'), destroy_user_session_path, method: :delete
   - elsif admin_signed_in?
     = link_to t('devise.sessions.sign_out'), destroy_admin_session_path, method: :delete
     .pull-right
-      = link_to 'Admin page', authenticated_root_path(status: 'new')
+      = link_to t('event.links.admin_page'), authenticated_root_path(status: 'new')
   - else
     = link_to t('devise.registrations.sign_up'), new_user_registration_path
     br
