--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -2,7 +2,7 @@
   - if user_signed_in?
     = link_to t('event.links.new'), new_event_path
     .pull-right
-      = link_to t('event.headers.user_list'), user_list_events_path
+      = link_to t('event.headers.user_list'), user_list_events_path(status: 'new')
     br
     = link_to t('devise.sessions.sign_out'), destroy_user_session_path, method: :delete
   - elsif admin_signed_in?
