--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,27 +1,3 @@
-.page-header
-  - if user_signed_in?
-    = link_to t('event.links.new'), new_event_path
-    br
-    = link_to t('devise.sessions.sign_out'), destroy_user_session_path, method: :delete
-  - else
-    = link_to t('devise.registrations.sign_up'), new_user_registration_path
-    br
-    = link_to t('devise.sessions.sign_in'), new_user_session_path
-
 h1= t('event.headers.index')
 br
-- @events.each do |event|
-  .event-divider
-    h4= link_to event.title, event_path(event)
-    - if user_signed_in? && current_user.events.include?(event)
-      p
-        = link_to t('event.links.edit'), edit_event_path(event)
-        = ' | '
-        = link_to t('event.links.delete'), event_path(event), method: :delete, data: { confirm: t('event.confirm') }
-    p
-      span.text-muted
-        = "#{date_formatter(event.start_time)} | "
-        = event.location
-    p= event.description
-
-= paginate(@events)
+= render 'list', events: @events
