--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -1,8 +1,8 @@
 doctype html
 html
   head
-    meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" /
-    title Quest
+    meta content=('text/html; charset=UTF-8') http-equiv='Content-Type'
+    title MeetUp
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
@@ -11,6 +11,8 @@ html
   body
     .container
       .row
+        = render 'layouts/header'
         - flash.each do |key, value|
           div class=("alert alert-#{key}") = value
         = yield
+    .page-footer
