--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -7,5 +7,5 @@ h2= t('devise.mailer.passwords.forgot_password')
       autofocus: true,
       input_html: { autocomplete: "email" }
   .form-actions
-    = f.button :submit, t('devise.mailer.passwords.reset_password_instructions')
+    = f.button :submit, t('devise.passwords.reset_password_instructions'), class: 'btn btn-primary'
 = render "devise/shared/links"
