--- a/app/views/admin/events/edit.html.slim
+++ b/app/views/admin/events/edit.html.slim
@@ -11,6 +11,7 @@ h2= t('event.headers.edit')
   = f.input :organizer_email
   = f.input :organizer_telegram
   = f.input :link
+  = f.association :tags, as: :check_boxes
 
   .col-md-4
     = f.button :submit, class: 'btn btn-primary'
