--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,13 +15,13 @@
  */
 
 @import "events";
-$notice_background: #fcf8e3;
-$notice_border: #faebcc;
-$notice_color: #8a6d3b;
+$notice-background: #fcf8e3;
+$notice-border: #faebcc;
+$notice-color: #8a6d3b;
 
 .alert-notice,
 .alert-alert {
-  background-color: $notice_background;
-  border-color: $notice_border;
-  color: $notice_color;
+  background-color: $notice-background;
+  border-color: $notice-border;
+  color: $notice-color;
 }
